--- a/365_Portal/t/admin.Master
+++ b/365_Portal/t/admin.Master
@@ -133,13 +133,29 @@
             </a>--%>
             <div class="nav-content float-right">
                 <ul class="navbar-nav">
-                    <li class="nav-item icon"><a class="nav-link" href="#">
-                        <img src="../includes/Asset/images/comments.png" /><span class="badge">2</span></a></li>
+                    <li class="nav-item icon dropdown"><a class="nav-link" id="navbarComments" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img src="../includes/Asset/images/comments.png" /><span class="badge">2</span></a>
 
-                    <li class="nav-item icon"><a class="nav-link" href="#">
-                        <img src="../includes/Asset/images/notifications.png" /><span class="badge">2</span></a></li>
+                        <div class="dropdown-menu" aria-labelledby="navbarComments">
+                            <a class="dropdown-item unread" href="#">You just completed the <b>Principles Made Practical module</b></a>
+                            <a class="dropdown-item unread" href="#">You’re <b>halfway</b> at completing all your modules! Congrats!</a>
+                            <a class="dropdown-item read" href="#">You just completed the <b>Staff Development topic</b></a>
+                            <a class="dropdown-item text-right font-weight-bold" href="#">Clear all</a>
+                        </div>
+                    </li>
 
-                    <li class="nav-item language">
+                    <li class="nav-item icon dropdown"><a class="nav-link" id="navbarNotification" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img src="../includes/Asset/images/notifications.png" /><span class="badge">2</span></a>
+
+                        <div class="dropdown-menu" aria-labelledby="navbarNotification">
+                            <a class="dropdown-item unread" href="#">You just completed the <b>Principles Made Practical module</b></a>
+                            <a class="dropdown-item unread" href="#">You’re <b>halfway</b> at completing all your modules! Congrats!</a>
+                            <a class="dropdown-item read" href="#">You just completed the <b>Staff Development topic</b></a>
+                            <a class="dropdown-item text-right font-weight-bold" href="#">Clear all</a>
+                        </div>
+                    </li>
+
+                    <li class="nav-item language dropdown">
                         <img src="../includes/Asset/images/us.png" class="circle" height="26" /></li>
                     <li class="nav-item">
                         <a class="nav-link">
