--- a/365_Portal/t/admin.Master
+++ b/365_Portal/t/admin.Master
@@ -7,6 +7,7 @@
     <title></title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link rel="icon" href="../INCLUDES/Asset/images/menu.png" type="image/png" sizes="16x16">
     <%-- CSS --%>
     <link href="../includes/Asset/css/bootstrap.min.css" rel="stylesheet" />
     <link href="../includes/Asset/css/all.css" rel="stylesheet" />
